# ChangeLog for app-admin/puppet
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.113 2012/05/31 02:36:58 zmedico Exp $

  31 May 2012; Zac Medico <zmedico@gentoo.org> puppet-2.7.11.ebuild,
  puppet-2.7.12.ebuild, puppet-2.7.13.ebuild:
  inherit user for enewgroup and enewuser

  19 May 2012; Ulrich Müller <ulm@gentoo.org> puppet-2.7.12.ebuild,
  puppet-2.7.13.ebuild:
  Names of emacs and xemacs eclass variables have changed, bug 406053.

  28 Apr 2012; Raúl Porcel <armin76@gentoo.org> puppet-2.7.13.ebuild:
  sparc stable wrt #401857

  16 Apr 2012; Jeff Horelick <jdhore@gentoo.org> puppet-2.7.13.ebuild:
  marked x86 per bug 410857

  16 Apr 2012; Brent Baude <ranger@gentoo.org> puppet-2.7.13.ebuild:
  Marking puppet-2.7.13 ppc for bug 410857

  16 Apr 2012; Agostino Sarubbo <ago@gentoo.org> puppet-2.7.13.ebuild:
  Stable for amd64, wrt bug #410857

  16 Apr 2012; Jeroen Roovers <jer@gentoo.org> puppet-2.7.13.ebuild:
  Stable for HPPA (bug #410857).

  16 Apr 2012; MATSUU Takuto <matsuu@gentoo.org> puppet-2.7.13.ebuild:
  Removed ruby19 and ree18 from USE_RUBY, bug #410857.

*puppet-2.7.13 (12 Apr 2012)

  12 Apr 2012; MATSUU Takuto <matsuu@gentoo.org> +puppet-2.7.13.ebuild:
  Version bumped, wrt #410857.

*puppet-2.7.12 (14 Mar 2012)

  14 Mar 2012; MATSUU Takuto <matsuu@gentoo.org> -puppet-2.6.12.ebuild,
  -puppet-2.7.9.ebuild, +puppet-2.7.12.ebuild:
  Version bumped. Fixed emacs and xemacs related issue, bug #406053. Added
  ruby19 and ree18 to USE_RUBY. Removed old versions.

  03 Mar 2012; Raúl Porcel <armin76@gentoo.org> puppet-2.7.11.ebuild:
  sparc stable wrt #403963

  03 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> puppet-2.7.11.ebuild:
  x86 stable wrt bug #403963

  03 Mar 2012; MATSUU Takuto <matsuu@gentoo.org> files/puppetmaster-2.7.6.init:
  Fixed checkpath args. The patch was submitted by Eric Martin, wrt bug
  #406053.
