@@ -12,18 +12,14 @@ AUX puppetmaster-2.7.6.confd 640 RMD160 6117e911ecc9be8c5eaa5df7562b6c9c56bc28aa
 AUX puppetmaster-2.7.6.init 867 RMD160 3dcf630b8f758a5a6075bd412c7174d182609235 SHA1 85b8e2aadc95658701a89e7aa8b44eef4b272fd0 SHA256 3fc62b4850ccd38517d9617671bef2a5d804147383744638de67c6f2289de28c
 AUX puppetmaster.confd 279 RMD160 64824fc2c88d9069b25d0548fac5981f1ff4fa6b SHA1 d521616310e7a27986c27138bd4d4382238d609a SHA256 6db68d9e093d3d231c8ad35968e8d276f68cdd7aec8577b3f7ac2998d1f91692
 AUX puppetmaster.init 984 RMD160 0f64b00f6b67fd4a7df0ed765fae096d7708abe0 SHA1 73c53119ac29591f1119637eb8818225bc32b95f SHA256 62f0abb0a386620be83586adaf34c1baff4719618d08495a7cbadaa21cc2d101
-DIST puppet-0.25.4.tar.gz 1424240 RMD160 67610414d6e5c41e9541eb7f392f391b94f1802e SHA1 290dcc20eb670b5b8e26d50301430e1333a037ab SHA256 c2dd640a31d1e57ad09929001f90247cd83908485f1f737abca352eb1866fbf3
-DIST puppet-2.6.0.gem 1482240 RMD160 4c4683ed5ec6647e766eb69d4df9cc89751bc56a SHA1 ae11e51c55433f006bd5a9bcbf0ec0a1308d71c3 SHA256 f186a08246d0ababbb99dda768dac9f986e397f455e646b125b69f452743564e
 DIST puppet-2.7.13.gem 1876992 RMD160 a300a1af4ba79ba430703bc6c71774e2dd9c2d25 SHA1 8fd974b7cb9feb5b5e70e050389a37574694aa48 SHA256 1e91ee9eed15d2ca4aba691299d1bde61de310cbcee0f1a557f9d47ffd2e0bd8
-EBUILD puppet-0.25.4-r1.ebuild 3544 RMD160 0dfb47a723cfcac0142a62ce5294c59af3a76cd1 SHA1 87108b41729bf2327b3e43720302b441de0af1bd SHA256 375698c93e8103faa78e1c7f8107735f3f0906e496ecc8b595daee3fcd32d712
-EBUILD puppet-2.6.0-r1.ebuild 3822 RMD160 71031e7294c622154cddc19de0a5d10480e9f92d SHA1 0ea910d95e7d5168fd8ffe6b8d0b2860d5575f7c SHA256 f7c8a06679f169ea76ff087de947ab78f7592c10ddfe383ecb7832edd858606c
 EBUILD puppet-2.7.13.ebuild 4686 RMD160 71826ffaffc1ed4c8981e20fce746186e2710a9b SHA1 7353cc1ecf60cca3036052786b8bf16a378aa9ed SHA256 83dafe5c6245f28cb948b94f7dd42fbd6415c345becc4450eb6201df382fda1e
-MISC ChangeLog 18932 RMD160 dbb543ac9884ecb879a6ccbe3131472d498c8ae8 SHA1 cba14e85421a64e8aef27943fbc16ab4b84b5f65 SHA256 a219bfbeea668e9291cee3a12fc3becb87d5ecaee17e92791539b1494616cc8f
+MISC ChangeLog 19074 RMD160 e5527b4e7ad680f42b81ff1296b61ddd7005f327 SHA1 a00b9e1e7d1505f29793924eaf5ab227c33b1dda SHA256 96cfbf9a10549c13fdf08a05d208a261543b890e4644ecb7d445525df72c982d
 MISC metadata.xml 1129 RMD160 64eb4cc09f22194da11da3c4e01441d846d1e9eb SHA1 bd76204117d9000ea1b3704054dbac3945a09026 SHA256 4e7dfa915273eb359790f38782099255c8e788794539b83205ed866b400d09cf
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (SunOS)
+Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk/LLwcACgkQX3X2B8XHTonn7QCdHfXJ3xswxfTgXlkwObnss2WN
-l4oAniOzDJJc9cq3MWDQLZ+v6WQ/XyTy
-=ndlA
+iEYEARECAAYFAk/zKosACgkQX3X2B8XHToncqgCghfAnFafNHi/0pVCQILzg46aT
+Y2UAn3mjcshjKRRxO4df/UxlUmn48Ysl
+=lLt7
 -----END PGP SIGNATURE-----
