@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-admin/puppet/ChangeLog,v 1.113 2012/05/31 02:36:58 zmedico Exp $
 
+  03 Jul 2012; Fabian Groffen <grobian@gentoo.org> -puppet-0.25.4-r1.ebuild,
+  -puppet-2.6.0-r1.ebuild:
+  Removed versions no longer in gx86
+
   31 May 2012; Zac Medico <zmedico@gentoo.org> puppet-2.7.11.ebuild,
   puppet-2.7.12.ebuild, puppet-2.7.13.ebuild:
   inherit user for enewgroup and enewuser
